<resources>
    <string name="app_name">GigR</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">LOG IN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="i_see_through_you">I SEE THROUGH YOU</string>
    <string name="sign_in">sign in</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="log_in_here">Log In here</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">REGISTER</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="more_sign_up_options">More sign up options</string>
</resources>